# skydel-template-plugin

./: CMakeLists.txt
source/: CMakeLists.txt
source/plugin/: CMakeLists.txt  plugin.h  plugin.json
